--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>io.trino</groupId>
     <artifactId>trino-root</artifactId>
-    <version>400-SNAPSHOT</version>
+    <version>400-new-exchanges-SNAPSHOT</version>
 
     <name>trino-root</name>
     <description>Trino</description>
